@@ -74,50 +74,74 @@ void dOrthogonalizeR(dMatrix3 m)
 // scale the components by 1/l. this has been verified to work with vectors
 // containing the smallest representable numbers.
 
-int dxSafeNormalize3 (dVector3 a)
+bool dxSafeNormalize3 (dVector3 a)
 {
     dAASSERT (a);
 
-    int idx;
-    dReal aa[3], l;
+    bool ret = false;
 
-    aa[0] = dFabs(a[0]);
-    aa[1] = dFabs(a[1]);
-    aa[2] = dFabs(a[2]);
-    if (aa[1] > aa[0]) {
-        if (aa[2] > aa[1]) { // aa[2] is largest
-            idx = 2;
+    do {
+        dReal abs_a0 = dFabs(a[0]);
+        dReal abs_a1 = dFabs(a[1]);
+        dReal abs_a2 = dFabs(a[2]);
+
+        int idx;
+
+        if (abs_a1 > abs_a0) {
+            if (abs_a2 > abs_a1) { // abs_a2 is the largest
+                idx = 2;
+            }
+            else {              // abs_a1 is the largest
+                idx = 1;
+            }
         }
-        else {              // aa[1] is largest
-            idx = 1;
-        }
-    }
-    else {
-        if (aa[2] > aa[0]) {// aa[2] is largest
+        else if (abs_a2 > abs_a0) {// abs_a2 is the largest
             idx = 2;
         }
         else {              // aa[0] might be the largest
-            if (aa[0] <= 0) { // aa[0] might is largest
-                a[0] = 1;	// if all a's are zero, this is where we'll end up.
-                a[1] = 0;	// return a default unit length vector.
-                a[2] = 0;
-                return 0;
+            if (!(abs_a0 > REAL(0.0))) { 
+                // if all a's are zero, this is where we'll end up.
+                // return the vector unchanged.
+                break;
             }
-            else {
-                idx = 0;
-            }
+
+            // abs_a0 is the largest
+            idx = 0;
         }
+
+        if (idx == 0) {
+            dReal aa0_recip = dRecip(abs_a0);
+            dReal a1 = a[1] * aa0_recip;
+            dReal a2 = a[2] * aa0_recip;
+            dReal l = dRecipSqrt(REAL(1.0) + a1 * a1 + a2 * a2);
+            a[1] = a1 * l;
+            a[2] = a2 * l;
+            a[0] = dCopySign(l, a[0]);
+        }
+        else if (idx == 1) {
+            dReal aa1_recip = dRecip(abs_a1);
+            dReal a0 = a[0] * aa1_recip;
+            dReal a2 = a[2] * aa1_recip;
+            dReal l = dRecipSqrt(REAL(1.0) + a0 * a0 + a2 * a2);
+            a[0] = a0 * l;
+            a[2] = a2 * l;
+            a[1] = dCopySign(l, a[1]);
+        }
+        else {
+            dReal aa2_recip = dRecip(abs_a2);
+            dReal a0 = a[0] * aa2_recip;
+            dReal a1 = a[1] * aa2_recip;
+            dReal l = dRecipSqrt(REAL(1.0) + a0 * a0 + a1 * a1);
+            a[0] = a0 * l;
+            a[1] = a1 * l;
+            a[2] = dCopySign(l, a[2]);
+        }
+
+        ret = true;
     }
+    while (false);
 
-    a[0] /= aa[idx];
-    a[1] /= aa[idx];
-    a[2] /= aa[idx];
-    l = dRecipSqrt (a[0]*a[0] + a[1]*a[1] + a[2]*a[2]);
-    a[0] *= l;
-    a[1] *= l;
-    a[2] *= l;
-
-    return 1;
+    return ret;
 }
 
 /* OLD VERSION */
@@ -140,9 +164,12 @@ void dNormalize3 (dVector3 a)
 }
 */
 
-int dxSafeNormalize4 (dVector4 a)
+bool dxSafeNormalize4 (dVector4 a)
 {
     dAASSERT (a);
+
+    bool ret = false;
+
     dReal l = dCalcVectorDot3(a,a)+a[3]*a[3];
     if (l > 0) {
         l = dRecipSqrt(l);
@@ -150,15 +177,11 @@ int dxSafeNormalize4 (dVector4 a)
         a[1] *= l;
         a[2] *= l;
         a[3] *= l;
-        return 1;
+        
+        ret = true;
     }
-    else {
-        a[0] = 1;
-        a[1] = 0;
-        a[2] = 0;
-        a[3] = 0;
-        return 0;
-    }
+
+    return ret;
 }
 
 
@@ -201,8 +224,10 @@ void dxPlaneSpace (const dVector3 n, dVector3 p, dVector3 q)
 void dxOrthogonalizeR(dMatrix3 m)
 {
     dReal n0 = dCalcVectorLengthSquare3(m);
-    if (n0 != 1)
-        dSafeNormalize3(m);
+    if (n0 != REAL(1.0)) {
+        bool row0_norm_fault = !dxSafeNormalize3(m);
+        dICHECK(!row0_norm_fault);
+    }
 
     // project row[0] on row[1], should be zero
     dReal proj = dCalcVectorDot3(m, m+4);
@@ -212,9 +237,12 @@ void dxOrthogonalizeR(dMatrix3 m)
         m[5] -= proj * m[1];
         m[6] -= proj * m[2];
     }
+
     dReal n1 = dCalcVectorLengthSquare3(m+4);
-    if (n1 != 1)
-        dSafeNormalize3(m+4);
+    if (n1 != REAL(1.0)) {
+        bool row1_norm_fault = !dxSafeNormalize3(m+4);
+        dICHECK(!row1_norm_fault);
+    }
 
     /* just overwrite row[2], this makes sure the matrix is not
     a reflection */
